fix favorite projects column display on mobile/narrow screens

--- a/src/style/Portfolio.css
+++ b/src/style/Portfolio.css
@@ -236,6 +236,15 @@
     align-self: center;
 }
 
+.Favorites-Area-Medium {
+    flex: 0.5;
+    padding: 1em;
+    display: inline-flex;
+    justify-content: end;
+    align-content: center;
+    align-self: center;
+}
+
 .Favorites-CUDA {
     margin-top: 6em;
     margin-bottom: 6em;
@@ -268,26 +277,22 @@
 }
 
 .Favorites-SMLR {
-    margin-top: 12em;
-    margin-bottom: 12em;
-}
-
-.Favorites-SMLR-Image-Area {
-    margin: 2em;
-    align-self: center;
+    margin-top: 6em;
+    margin-bottom: 6em;
+    width: 100%;
+    justify-content: center;
+    display: flex;
 }
 
 .Favorites-SMLR-Image-Area img {
-    max-width: 500px;
-    aspect-ratio: auto;
     border: 4px solid rgba(255, 255, 255, 1);
     border-radius: 0.25em;
+    width: 30vw;
+    max-width: 500px;
 }
 
 .Favorites-SMLR-Text-Area {
-    max-width: 500px;
-    height: min-content;
-    align-self: center;
+    display: flex;
 }
 
 .Favorites-SMLR-Text-Area h3 {
@@ -301,29 +306,25 @@
     background-color: #fff;
     border-radius: 0.25em;
     margin-top: 2em;
+    margin-right: 1.5em;
 }
 
 .Favorites-CHROM-TUNER {
-    margin-top: 12em;
-    margin-bottom: 12em;
-}
-
-.Favorites-CHROM-TUNER-Image-Area {
-    margin: 2em;
-    align-self: center;
+    margin-top: 6em;
+    margin-bottom: 6em;
+    width: 100%;
+    justify-content: center;
+    display: flex;
 }
 
 .Favorites-CHROM-TUNER-Image-Area img {
-    max-width: 400px;
-    aspect-ratio: auto;
     border: 4px solid rgba(255, 255, 255, 1);
     border-radius: 0.25em;
+    max-width: 30vw;
 }
 
 .Favorites-CHROM-TUNER-Text-Area {
-    max-width: 500px;
-    height: min-content;
-    align-self: center;
+    display: flex;
 }
 
 .Favorites-CHROM-TUNER-Text-Area h3 {
@@ -337,7 +338,10 @@
     background-color: #fff;
     border-radius: 0.25em;
     margin-top: 2em;
+    margin-right: 1.5em;
 }
+
+
 
 /*
     Styles for different screen sizes
@@ -358,5 +362,46 @@
         justify-self: center;
         margin: auto;
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .Favorites-SMLR {
+        display: block;
+    }
+
+    .Favorites-CHROM-TUNER {
+        display: block;
+    }
+
+    .Favorites-SMLR > div {
+        justify-content: center;
+        align-content: center;
+        justify-self: center;
+        margin: auto;
+        width: 100%;
+        display: block;
+    }
+
+    .Favorites-CHROM-TUNER > div {
+        justify-content: center;
+        align-content: center;
+        justify-self: center;
+        margin: auto;
+        width: 100%;
+    }
+
+    .Favorites-SMLR-Image-Area img {
+        border: 4px solid rgba(255, 255, 255, 1);
+        border-radius: 0.25em;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .Favorites-CHROM-TUNER-Image-Area img {
+        border: 4px solid rgba(255, 255, 255, 1);
+        border-radius: 0.25em;
+        width: 100%;
+        max-width: 100%;
     }
 }
